Working EF added

--- a/BlazorEF.Tests/BlazorEF.Tests.csproj
+++ b/BlazorEF.Tests/BlazorEF.Tests.csproj
@@ -9,8 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="RandomDataGenerator.Net" Version="1.0.16" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="Xunit.DependencyInjection" Version="8.5.0" />
@@ -26,10 +28,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorEF.Shared\BlazorEF.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
