--- a/BlazorEF.Shared/BlazorEF.Shared.csproj
+++ b/BlazorEF.Shared/BlazorEF.Shared.csproj
@@ -14,6 +14,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="RandomDataGenerator.Net" Version="1.0.16" />
   </ItemGroup>
 
