Add app settings

--- a/BlazorEF.ConsoleApp/appsettings.json
+++ b/BlazorEF.ConsoleApp/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Settings": {
+    "KeyOne": 1,
+    "KeyTwo": true,
+    "KeyThree": {
+      "Message": "Hello key three message."
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug"
