Add MAUI app to SQL database example.

--- a/BlazorEF.ConsoleApp/BlazorEF.ConsoleApp.csproj
+++ b/BlazorEF.ConsoleApp/BlazorEF.ConsoleApp.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorEF.Shared\BlazorEF.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
