--- a/BlazorEF.FunctionApp1/local.settings.json
+++ b/BlazorEF.FunctionApp1/local.settings.json
@@ -5,6 +5,6 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet"
   },
   "Settings": {
-    "ConnectionString": "test"
+    "ConnectionString": "Data Source=localhost;Initial Catalog=BlazorEfFunctionApp1;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=Password2022;"
   }
 }
