--- a/BlazorEF.Tests/BlazorEF.Tests.csproj
+++ b/BlazorEF.Tests/BlazorEF.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -28,6 +28,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorEF.Shared\BlazorEF.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="local.settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
